--- a/style.css
+++ b/style.css
@@ -17,13 +17,21 @@
 }
 .btn:hover { background-color: #fde047; }
 
-.label-title {
-  position: absolute;
-  top: 0.25rem;
-  left: 0.5rem;
+.line-wrapper {
+  position: relative;
+  height: 160px;
+  padding: 0.5rem 1rem;
+}
+.line-title {
+  color: #111;
   font-weight: 700;
-  color: #000;
-  font-size: 0.85rem;
+  text-align: center;
+  margin-bottom: 0.25rem;
+}
+.line-container {
+  position: relative;
+  width: 100%;
+  height: 100px;
 }
 
 .marker {
