--- a/style.css
+++ b/style.css
@@ -42,29 +42,35 @@ p {
 
 .number-line {
     position: relative;
-    height: 30px;
+    height: 60px;
     background-color: #87ceeb;
     border: 3px solid #2c7744;
     border-radius: 10px;
     margin: 0 auto;
     width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 0 10px;
 }
 
-.number-line span {
+.tick {
     position: absolute;
+    bottom: 0;
+    width: 2px;
+    height: 18px;
+    background-color: #2c7744;
     transform: translateX(-50%);
-    font-size: 1.1em;
+}
+
+.tick-label {
+    position: absolute;
+    transform: translate(-50%, -30px);
+    font-size: 1em;
     font-weight: bold;
     color: #333;
 }
 
 .marker {
     position: absolute;
-    top: 25px;
+    top: 10px;
     transform: translateX(-50%);
     width: 30px;
     height: 30px;
